MGNLUI-1886 Polishing and further improvements of TextAreaStretcher, CKEditor basic support, bug fixes.

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/admincentraltheme.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/admincentraltheme.scss
@@ -113,6 +113,6 @@
   }
 
   .cke_contents {
-  	height: 180px !important;
+  	height: 180px;
   }
 }
