--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
@@ -317,6 +317,8 @@ fieldset {
   height: 16px;
 }
 
-
+  .v-ckeditortextfield .textarea-expander.collapsed {
+    position: absolute;
+  }
 
 }
